--- a/_config.yml
+++ b/_config.yml
@@ -150,9 +150,9 @@ related_blog_posts:
 giscus:
   repo: kasjfksj/kasjfksj.github.io
   repo_id: 844239189
-  category: Comments # name of the category under which discussions will be created
+  category: fine-tune # name of the category under which discussions will be created
   category_id: # leave empty or specify your category_id (see https://giscus.app/)
-  mapping: title # identify discussions by post title
+  mapping: LoRA - a potential parameter efficient fine-tuning method for large models # identify discussions by post title
   strict: 1 # use strict identification mode
   reactions_enabled: 1 # enable (1) or disable (0) emoji reactions
   input_position: bottom # whether to display input form below (bottom) or above (top) the comments
