--- a/_config.yml
+++ b/_config.yml
@@ -148,13 +148,13 @@ related_blog_posts:
 # Giscus comments (RECOMMENDED)
 # Follow instructions on https://giscus.app/ to setup for your repo to fill out the information below.
 giscus:
-  repo: kasjfksj/kasjfksj.github.io
-  repo_id: 844239189
-  category: fine-tune # name of the category under which discussions will be created
-  category_id: # leave empty or specify your category_id (see https://giscus.app/)
-  mapping: LoRA - a potential parameter efficient fine-tuning method for large models # identify discussions by post title
-  strict: 1 # use strict identification mode
-  reactions_enabled: 1 # enable (1) or disable (0) emoji reactions
+  repo: "kasjfksj/kasjfksj.github.io"
+  repo_id: "R_kgDOMlIRVQ"
+  category: "Announcements" # name of the category under which discussions will be created
+  category_id: "DIC_kwDOMlIRVc4Ch8ft" # leave empty or specify your category_id (see https://giscus.app/)
+  mapping: "pathname" # identify discussions by post title
+  strict: "0" # use strict identification mode
+  reactions_enabled: "1" # enable (1) or disable (0) emoji reactions
   input_position: bottom # whether to display input form below (bottom) or above (top) the comments
   theme: preferred_color_scheme # name of the color scheme (preferred works well with al-folio light/dark mode)
   emit_metadata: 0
